refactor: modelmapper, builder 패턴으로 코드 구조 변경 및 enum 클래스 작성 #7